2001-06-15  Corey Minyard <minyard@acm.org>
	
	* controller.c - Made sure the monitor port was set to null
	when the port exited.

	* ser2net.c, ser2net.1 - Added a "-d" option to send debug
	output to the console and modified "-n" to just not detach.
	
2001-06-05  Corey Minyard <minyard@acm.org>

	* ser2net.c, controller.c - added a way to query the version from
	the command line and from the controller port.

	* controller.c, controller.h, dataxfer.c, dataxfer.h - added
	monitoring of data flowing into a port.  It's somewhat primitive
	yet, but still useful

	* controller.c, dataxfer.c, dataxfer.h - added a way to disconnect
	a port from the control port.

2001-06-04  Corey Minyard <minyard@acm.org>

	* Initial creation.
