@@ -1,5 +1,5 @@
 AC_INIT(ser2net.c)
-AM_INIT_AUTOMAKE(ser2net, 1.2)
+AM_INIT_AUTOMAKE(ser2net, 1.3)
 AM_PROG_LIBTOOL
 AC_PROG_CC
 AC_STDC_HEADERS
