@@ -1,3 +1,10 @@
+2001-06-28  Corey Minyard <minyard@acm.org>
+
+	* dataxfer.c - Added the ability to convert a telnet break
+	to a serial port break.
+
+	* configure.in - Updated to version 1.3
+
 2001-06-15  Corey Minyard <minyard@acm.org>
 	
 	* controller.c - Made sure the monitor port was set to null
